fixed result card to appear better on smaller screens

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ img{
   border-bottom: 4px solid white;
 }
 .result-card{
-  height: 28vh;
+  height: 32vh;
 }
 .small-margin{
   margin-top: 3%;
